# cfdojo

./: .gitignore  CMakeLists.txt  C_Meximum_Array_2.cpack  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: FindQScintilla.cmake  VendorDeps.cmake
docs/: quickstart.md
src/: Version.h  main.cpp  resource.qrc
src/app/: ActivityBarButton.cpp  ActivityBarButton.h  CollapsibleSplitter.cpp  CollapsibleSplitter.h  HomeWindow.cpp  HomeWindow.h  LandingButton.cpp  LandingButton.h  MainWindow.cpp  MainWindow.cpp.new  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  TrainerWindow.cpp  TrainerWindow.h
src/companion/: CompanionListener.cpp  CompanionListener.h
src/editor/: DojoCppLexer.cpp  DojoCppLexer.h  EditorConfigurator.cpp  EditorConfigurator.h  EditorPlaceholder.cpp  EditorPlaceholder.h  keywords.txt
src/execution/: CompilationConfig.h  CompilationUtils.h  ExecutionController.cpp  ExecutionController.h  ParallelExecutor.cpp  ParallelExecutor.h
src/file/: CpackFileHandler.cpp  CpackFileHandler.h  CphFileHandler.cpp  CphFileHandler.h
src/theme/: ThemeManager.cpp  ThemeManager.h  style.qss
src/ui/: AutoResizingTextEdit.cpp  AutoResizingTextEdit.h  FileExplorerBuilder.cpp  FileExplorerBuilder.h  IconUtils.h  StressPanelBuilder.cpp  StressPanelBuilder.h  TestPanelBuilder.cpp  TestPanelBuilder.h
src/ui/.cph/: .TestPanelBuilder.cpp_a2796e4d42152ccf34bfc68eea233f30.prob
test/: problem.cpack  test_cpack_handler.cpp
tools/: package_appimage.sh
